examples/invalid/projects/bad_links_missing_data_plane/main.ns
use data FabricPlane;
use shader SurfaceShader;

mod cpu Main {
  fn main() {
    cpu_window(320, 200, "bad_links_missing_data_plane");
    let color: i64 = 7;
    print(color);
  }
}
